@@ -1,3 +1,7 @@
+2016-02-02  Edward Jones  <ed.jones@embecosm.com>
+
+	* lib/Driver.cpp (main): Actually return 0 on success.
+
 2016-01-21  Edward Jones  <ed.jones@embecosm.com>
 
 	* lib/Driver.cpp (parseResults): Change results file format to
